--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -70,6 +70,9 @@
   register: update_epel_repo
   tags: packages
 
+- name: install "rawhide" RGM repositories if requested
+  when: enable_rawhide
+
 - name: update RGM repositories if required
   yum_repository:
     name: "{{ item.key }}"
@@ -86,6 +89,22 @@
   loop: "{{ rgm_repositories | dict2items }}"
   register: update_rgm_repo
   tags: always
+
+- name: install "rawhide" RGM repositories if requested
+  yum_repository:
+    name: "{{ item.key }}"
+    description: "{{ item['value']['description'] }}"
+    file: rgm-rawhide
+    baseurl: "{{ item['value']['baseurl'] }}"
+    gpgcheck: "{{ item['value']['gpgcheck'] }}"
+    enabled: "{{ item['value']['enabled'] }}"
+    keepcache: "{{ item['value']['cache'] | default(false)}}"
+    gpgkey: "{{ item['value']['gpgkey'] | default('file://' + rgm_gpg_key) }}"
+    sslverify: "{{ item['value']['sslverify'] | default(omit) }}"
+    sslclientcert: "{{ item['value']['sslclientcert'] | default(omit) }}"
+    sslclientkey: "{{ item['value']['sslclientkey'] | default(omit) }}"
+  loop: "{{ rgm_repositories_rawhide | dict2items }}"
+  when: enable_rawhide
 
 - name: force yum clean & make cache
   command: yum clean all
