--- a/vars/main.yml
+++ b/vars/main.yml
@@ -42,7 +42,6 @@ packages_mariadb:
 
 packages_apache:
 - httpd
-- mod_auth_rgm
 - mod_perl
 - mod_ssl
 - mod_fcgid
@@ -256,6 +255,42 @@ rgm_repositories:
     cache: false
     gpgcheck: true
     gpgkey: "file://{{ rgm_gpg_key }}"
+
+rgm_repositories_rawhide:
+  rgm-community-base-rawhide:
+    description: RGM Community - Base - rawhide
+    baseurl: https://community.repo.rgm-cloud.io/rawhide/latest/os/x86_64/
+    enabled: true
+    sslverify: false
+    cache: false
+    gpgcheck: true
+    gpgkey: "file://{{ rgm_gpg_key }}"
+  rgm-community-updates-rawhide:
+    description: RGM Community - Updates - rawhide
+    baseurl: https://community.repo.rgm-cloud.io/rawhide/latest/updates/x86_64/
+    enabled: true
+    sslverify: false
+    cache: false
+    gpgcheck: true
+    gpgkey: "file://{{ rgm_gpg_key }}"
+  rgm-business-base-rawhide:
+    description: RGM Business Base Repository - rawhide
+    baseurl: https://business.repo.rgm-cloud.io/rawhide/latest/os/x86_64/
+    enabled: "{{ enable_rgm_repo_business }}"
+    gpgcheck: true
+    gpgkey: "file://{{ rgm_gpg_key }}"
+    sslverify: true
+    sslclientcert: "/etc/pki/tls/certs/{{ rgm_business_registration_id }}.crt"
+    sslclientkey: "/etc/pki/tls/private/{{ rgm_business_registration_id }}.key"
+  rgm-business-updates-rawhide:
+    description: RGM Business Updates Repository - rawhide
+    baseurl: https://business.repo.rgm-cloud.io/rawhide/latest/updates/x86_64/
+    enabled: "{{ enable_rgm_repo_business }}"
+    gpgcheck: true
+    gpgkey: "file://{{ rgm_gpg_key }}"
+    sslverify: true
+    sslclientcert: "/etc/pki/tls/certs/{{ rgm_business_registration_id }}.crt"
+    sslclientkey: "/etc/pki/tls/private/{{ rgm_business_registration_id }}.key"
 
 
 #### rgmweb 'deploy' section
