--- a/tasks/http.yml
+++ b/tasks/http.yml
@@ -36,12 +36,12 @@
 
 ## apache configuration
 
-- name: set Apache root path
-  lineinfile:
-    path: /etc/httpd/conf/httpd.conf
-    regexp: '^DocumentRoot'
-    line: "DocumentRoot \"{{ rgm_root_path }}/rgmweb\""
-  notify: service_reload_http
+#- name: set Apache root path
+#  lineinfile:
+#    path: /etc/httpd/conf/httpd.conf
+#    regexp: '^DocumentRoot'
+#    line: "DocumentRoot \"{{ rgm_root_path }}/rgmweb\""
+#  notify: service_reload_http
 
 - name: test if original SSL configuration file exists
   stat:
@@ -61,25 +61,26 @@
       state: absent
   when: stat_ssl_conf.stat.exists
 
+- name: test if original fcgid.conf file exists
+  stat:
+    path: /etc/httpd/conf.d/fcgid.conf
+  register: stat_fcgid_conf
+
+- name: move fcgid.conf to 01_fcgid.conf
+  command: mv /etc/httpd/conf.d/fcgid.conf /etc/httpd/conf.d/01_fcgid.conf
+  when: stat_fcgid_conf.stat.exists
+
 - name: Install RGM httpd config files
   template:
-    src: "httpd/{{ item }}.conf.j2"
-    dest: "/etc/httpd/conf.d/{{ item }}.conf"
+    src: "httpd/{{ item.src }}.j2"
+    dest: "/etc/httpd/conf.d/{{ item.dst }}"
     owner: root
     group: root
     mode: 0644
   with_items:
-  - 00_hardening
-  - 01_ssl
-  - 10_rgm
-  - 11_rgmapi
-  - 11_distrib
-  - 15_grafana
-  - 15_elasticsearch
-  - 15_kibana
-  - 15_nrdp
-  - 15_prometheus
-  - 15_rgma
+  - { src: '00_hardening.conf',  dst: '00_hardening.conf'}
+  - { src: 'ssl.conf',           dst: 'ssl.conf'}
+  - { src: 'zz_elastic_hq.conf', dst: 'zz_elastic_hq.conf.disabled'}
   notify: service_reload_http
 
 ## restart apache now as we'll use RGM API later on role
