--- a/tasks/elastic_common_post.yml
+++ b/tasks/elastic_common_post.yml
@@ -28,20 +28,14 @@
     delay: 20
     register: metricbeat_setup
     until: metricbeat_setup.rc == 0
+    when: metricbeat_config.changed
 
-  - name: setup metricbeat indexes and dashboards
-    command: metricbeat setup -c /etc/metricbeat/metricbeat.yml -path.home /usr/share/metricbeat -path.config /etc/metricbeat -path.data /var/lib/metricbeat -path.logs /var/log/metricbeat
+  - name: setup filebeat indexes and dashboards
+    command: filebeat setup  --dashboards --index-management --machine-learning
     retries: 10
     delay: 20
-    register: metricbeat_setup
-    until: metricbeat_setup.rc == 0
+    register: filebeat_setup
+    until: filebeat_setup.rc == 0
+    when: filebeat_config.changed
 
-  when: elasticsearch_conf.changed or elasticsearch_conf_jvm.changed or metricbeat_config.changed
-
-- name: setup filebeat indexes and dashboards
-  command: filebeat setup  --dashboards --index-management --machine-learning
-  retries: 10
-  delay: 20
-  register: filebeat_setup
-  until: filebeat_setup.rc == 0
-  when: elasticsearch_conf.changed or filebeat_config.changed
+  when: elasticsearch_conf.changed or elasticsearch_conf_jvm.changed or metricbeat_config.changed or filebeat_config.changed
