fix /bin/sh redirection syntax

--- a/tasks/elastic_common_pre.yml
+++ b/tasks/elastic_common_pre.yml
@@ -120,7 +120,7 @@
 
 - name: set cron job for curator
   copy:
-    content: "10 0 * * * root /usr/bin/curator --config /etc/elasticsearch/curator.yml /etc/elasticsearch/actions.yml &> /dev/null"
+    content: "10 0 * * * root /usr/bin/curator --config /etc/elasticsearch/curator.yml /etc/elasticsearch/actions.yml > /dev/null"
     dest: /etc/cron.d/elastic_curator
     owner: root
     group: root
