Clean distrib folder

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -85,6 +85,7 @@ packages_rgm:
 - lilac
 - rgmweb
 - rgmapi
+- rgm-distrib-beats
 - snmp2elastic
 - wmi
 
@@ -294,96 +295,6 @@ rgm_repositories_rawhide:
 
 
 #### rgmweb 'deploy' section
-
-# one line tags are used to fill deploy DB schema with these constants
-oneliner_tags:
-- { id: 1 , tag: linux }
-- { id: 2 , tag: windows }
-- { id: 3 , tag: metricbeat }
-- { id: 4 , tag: heartbeat }
-- { id: 5 , tag: winlogbeat }
-- { id: 6 , tag: filebeat }
-- { id: 7 , tag: auditbeat }
-- { id: 8 , tag: packetbeat }
-- { id: 9 , tag: prometheus }
-
-# the structure bellow fills the 'deploy' DB schema with one-liners informations
-oneliner_items:
-- item: windows_metricbeat
-  shell: "Windows PowerShell"
-  markdown_instruction: windows_metricbeat_instructions.md
-  markdown_help: windows_metricbeat_advanced_help.md
-  command: "& $([Scriptblock]::Create((New-Object System.Net.WebClient).DownloadString(\"https://{{ ansible_default_ipv4.address }}/distrib/install/Add-RGMHost.ps1\"))) -username \"admin user\" -password \"password\""
-  tags:
-  - 2
-  - 3
-  payload_files:
-  - Install-MetricBeat.ps1
-  - Install-Beats.ps1
-  - Add-RGMHost.ps1
-  config_files:
-  - windows_metricbeat.yml
-  - windows_auditbeat.yml
-  - windows_filebeat.yml
-  - windows_heartbeat.yml
-  - windows_winlogbeat.yml
-  modules_files:
-  - windows_rgm-system-core.yml
-  - windows_rgm-system-fs.yml
-  - windows_rgm-system-uptime.yml
-  upstream_files:
-  - https://artifacts.elastic.co/downloads/beats/metricbeat/metricbeat-oss-7.10.2-windows-x86_64.zip
-  - https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-oss-7.10.2-windows-x86_64.zip
-  - https://artifacts.elastic.co/downloads/beats/winlogbeat/winlogbeat-oss-7.10.2-windows-x86_64.zip
-  - https://artifacts.elastic.co/downloads/beats/auditbeat/auditbeat-oss-7.10.2-windows-x86_64.zip
-  - https://artifacts.elastic.co/downloads/beats/heartbeat/heartbeat-oss-7.10.2-windows-x86_64.zip
-  #- https://artifacts.elastic.co/downloads/beats/packetbeat/packetbeat-oss-7.2.1-windows-x86_64.zip 
-  re_pattern: '^.*\/(?P<prefix>\w+-oss-).*(?P<suffix>-win.+)$'
-  re_replace: '\g<prefix>latest\g<suffix>'
-
-- item: linux_metricbeat
-  shell: "bash"
-  markdown_instruction: linux_metricbeat_instructions.md
-  markdown_help: linux_metricbeat_advanced_help.md
-  command: bash <(curl -k "https://{{ ansible_default_ipv4.address }}/distrib/install/install-metricbeat.bash")
-  tags:
-  - 1
-  - 3
-  payload_files:
-  - install-metricbeat.bash
-  config_files:
-  - linux_metricbeat.yml
-  modules_files:
-  - linux_rgm-system-core.yml
-  - linux_rgm-system-fs.yml
-  - linux_rgm-system-uptime.yml
-  upstream_files:
-  - "{{ rgm_repositories_rawhide['rgm-community-updates-rawhide']['baseurl'] | regex_replace('\\/$', '') }}/Packages/metricbeat-oss-7.10.2-x86_64.rpm"
-  - https://artifacts.elastic.co/downloads/beats/metricbeat/metricbeat-oss-7.10.2-amd64.deb
-  re_pattern: '^.*\/(?P<prefix>\w+-oss-).*(?P<suffix>-(x86_|amd)64.+)$'
-  re_replace: '\g<prefix>latest\g<suffix>'
-
-- item: prometheus
-  shell: "bash"
-  markdown_instruction: prometheus_instructions.md
-  markdown_help: ''
-  command: bash <(curl -k "https://{{ ansible_default_ipv4.address }}/distrib/install/install-prometheus.bash")
-  tags:
-  - 1
-  - 9
-  payload_files:
-  - install-prometheus.bash
-#  config_files:
-#  - linux_metricbeat.yml
-#  modules_files:
-#  - linux_rgm-system-core.yml
-#  - linux_rgm-system-fs.yml
-#  - linux_rgm-system-uptime.yml
-#  upstream_files:
-#  - https://community.repo.rgm-cloud.io/rgm/latest/updates/x86_64/Packages/metricbeat-oss-7.10.2-x86_64.rpm
-#  - https://artifacts.elastic.co/downloads/beats/metricbeat/metricbeat-oss-7.10.2-amd64.deb
-#  re_pattern: '^.*\/(?P<prefix>\w+-oss-).*(?P<suffix>-(x86_|amd)64.+)$'
-#  re_replace: '\g<prefix>latest\g<suffix>'
 
 es_group: elasticsearch
 
