--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -516,10 +516,14 @@
 
   - name: get a valid RGMAPI token
     uri:
-      url: "https://localhost/api/v2/token?&username={{ rgm_admin_user }}&password={{ rgm_admin_password }}"
+      url: "https://localhost/api/v2/token"
       method: POST
-      body_format: json
+      body_format: form-urlencoded
+      body:
+        username: {{ rgm_admin_user }}
+        password: {{ rgm_admin_password }}
       validate_certs: no
+      use_proxy: no
       status_code: [200, 201]
     register: auth_rgmapi
     tags: rgmexport
@@ -533,6 +537,7 @@
       headers:
         Authorization: "Bearer {{ auth_rgmapi.json.token }}"
       validate_certs: no
+      use_proxy: no
       status_code: [200, 201]
     when: auth_rgmapi is succeeded
     notify: service_reload_nagios
